src/App.scss
$textColor: rgb(18,18,18);
$whiteTextColor: rgb(255,255,255);
$redText: rgb(235, 47, 41);
$hoverText: rgb(190, 38, 33);
$backgroundRed: #ed1c24;

$topHeaderHeight: 2.25rem;
$bottomHeaderHeight: 4.45rem;
$bottomHeaderHeight-mobile: 3.3rem;

@import './stylesheets/header';
@import './stylesheets/footer';
@import './stylesheets/landingPage';
@import './stylesheets/toolbar';
@import './stylesheets//bikeListing';
@import './stylesheets/itemCard';
@import './stylesheets/trailBikeListing';
@import './stylesheets/productPage/productPage';
@import './stylesheets/productPage/gallery';
@import './stylesheets/productPage/galleryFooter';
@import './stylesheets/productPage/description';
@import './stylesheets/productPage/specs';
@import "~react-image-gallery/styles/scss/image-gallery.scss";
@import './stylesheets//productPage/reviews';
@import './stylesheets/cart';
@import './stylesheets/cart/cartListing';
@import './stylesheets/cart/cartSummary';
@import './stylesheets/cart/cartPreview';

#page-container {
  max-width: 1920px;
  margin-left: auto;
  margin-right: auto;
}

html {
  background-color: rgb(247,247,247);
  color: #414141;
}

#root {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  min-height: 100vh;
}

